broken ui fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -198,6 +198,9 @@ Loading Page Style
   font-family: "Poppins", sans-serif;
   color: #3d3d3d;
 }
+.card .content p {
+ width: 100%;
+}
 
 
 
